[tool.poetry]
name = "forestbook"
version = "0.2.0"
description = "Blog application for sport orienteering"
authors = ["pavlentiod <levap.spb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["all"], version = "^2.0.27"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
fastapi = {extras = ["all"], version = "^0.109.2"}
pyarrow = "^15.0.0"
gpxcsv = "^0.2.15"
uuid = "^1.30"
python-multipart = "^0.0.9"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.2"
pathlib = "^1.0.1"
logging = "^0.4.9.6"
boto3 = "^1.34.103"
awscli = "^1.32.103"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
