[tool.poetry]
name = "forestbook"
version = "0.1.0"
description = ""
authors = ["pavel <levap.spb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
bcrypt = "^4.2.1"
greenlet = "^3.1.1"
alembic = "^1.14.0"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
uvicorn = "^0.34.0"
boto3 = "^1.35.93"
redis = "^5.2.1"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
